feat: Update security screen and manifest
Refactor the SecurityScreen component by removing unused imports and state variables related to speed testing. Update the manifest.json file with new app ID, start_url, language, and direction attributes, and add additional maskable icons for improved PWA experience.

--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,15 @@
   "name": "Phone Master - Utility Toolkit",
   "short_name": "Phone Master",
   "description": "Professional toolkit for PDF compression, Image to PDF conversion, AI-powered OCR, WhatsApp Status saving, and system health monitoring. Developed by BahatiTech Solutions.",
-  "id": "/",
-  "start_url": "./",
+  "id": "com.bahatitech.phonemaster",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#3b82f6",
   "orientation": "portrait",
   "scope": "/",
+  "lang": "en-US",
+  "dir": "ltr",
   "categories": [
     "productivity",
     "utilities"
@@ -24,6 +26,12 @@
     {
       "src": "https://cdn-icons-png.flaticon.com/192/3067/3067451.png",
       "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "https://cdn-icons-png.flaticon.com/512/3067/3067451.png",
+      "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     }
