feat: Enhance PWA metadata and manifest
Update index.html and manifest.json to improve Progressive Web App (PWA) metadata. This includes adding more PWA specific meta tags for better app integration and updating manifest properties like `id`, `start_url`, `scope`, and adding `purpose` to icons for improved display and functionality. Also added application shortcuts to manifest.

--- a/manifest.json
+++ b/manifest.json
@@ -2,27 +2,22 @@
 {
   "name": "Phone Master - Utility Toolkit",
   "short_name": "Phone Master",
-  "description": "Professional toolkit for PDF compression, Image to PDF conversion, AI-powered OCR, WhatsApp Status saving, and system health monitoring. Developed by BahatiTech Solutions.",
-  "id": "com.bahatitech.phonemaster",
-  "start_url": ".",
+  "description": "Premium Utility Toolkit for Android. Features PDF tools, AI OCR, WhatsApp Status Saver, and System Health Report Card. Developed by BahatiTech Solutions.",
+  "id": "com.bahatitech.phonemaster.v2",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#3b82f6",
   "orientation": "portrait",
-  "scope": "/",
   "lang": "en-US",
   "dir": "ltr",
   "categories": [
     "productivity",
-    "utilities"
+    "utilities",
+    "tools"
   ],
   "icons": [
-    {
-      "src": "https://cdn-icons-png.flaticon.com/512/3067/3067451.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
-    },
     {
       "src": "https://cdn-icons-png.flaticon.com/192/3067/3067451.png",
       "sizes": "192x192",
@@ -33,7 +28,41 @@
       "src": "https://cdn-icons-png.flaticon.com/512/3067/3067451.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any"
     }
-  ]
+  ],
+  "shortcuts": [
+    {
+      "name": "Security Scan",
+      "short_name": "Scan",
+      "description": "Run a deep system health check",
+      "url": "./?tab=Security",
+      "icons": [{ "src": "https://cdn-icons-png.flaticon.com/96/3067/3067451.png", "sizes": "96x96" }]
+    },
+    {
+      "name": "Save Status",
+      "short_name": "Status",
+      "description": "Save WhatsApp Status",
+      "url": "./?tab=Media",
+      "icons": [{ "src": "https://cdn-icons-png.flaticon.com/96/3067/3067451.png", "sizes": "96x96" }]
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "https://images.unsplash.com/photo-1616353071588-708dcff912e2?auto=format&fit=crop&q=80&w=1080&h=1920",
+      "sizes": "1080x1920",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Phone Master Dashboard"
+    },
+    {
+      "src": "https://images.unsplash.com/photo-1555774698-0b77e0d5fac6?auto=format&fit=crop&q=80&w=1920&h=1080",
+      "sizes": "1920x1080",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "Phone Master Desktop Mode"
+    }
+  ],
+  "prefer_related_applications": false,
+  "related_applications": []
 }
