--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,26 @@
 
 {
-  "name": "Phone Master - Utility Toolkit",
+  "name": "Phone Master Pro",
   "short_name": "Phone Master",
-  "description": "Professional toolkit for PDF compression, AI-powered OCR, WhatsApp Status saving, and system health monitoring. Featuring the Bahati Security Report Card.",
+  "description": "Professional high-authority utility toolkit by BahatiTech.",
   "id": "com.bahatitech.phonemaster",
   "start_url": "./",
   "scope": "./",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#020617",
   "theme_color": "#3b82f6",
   "orientation": "portrait",
   "lang": "en-US",
   "dir": "ltr",
   "categories": [
     "productivity",
-    "utilities"
+    "utilities",
+    "security"
   ],
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/192/3067/3067451.png",
-      "sizes": "192x192",
+      "src": "https://cdn-icons-png.flaticon.com/512/3067/3067451.png",
+      "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
@@ -27,51 +28,30 @@
       "src": "https://cdn-icons-png.flaticon.com/512/3067/3067451.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "https://cdn-icons-png.flaticon.com/192/3067/3067451.png",
-      "sizes": "192x192",
-      "type": "image/png",
       "purpose": "maskable"
-    },
-    {
-      "src": "https://cdn-icons-png.flaticon.com/512/3067/3067451.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "https://images.unsplash.com/photo-1616353071588-708dcff912e2?auto=format&fit=crop&q=80&w=1080&h=1920",
-      "sizes": "1080x1920",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Phone Master Mobile View"
-    },
-    {
-      "src": "https://images.unsplash.com/photo-1555774698-0b77e0d5fac6?auto=format&fit=crop&q=80&w=1920&h=1080",
-      "sizes": "1920x1080",
-      "type": "image/png",
-      "form_factor": "wide",
-      "label": "Phone Master Desktop View"
     }
   ],
   "shortcuts": [
     {
-      "name": "Scan Device",
+      "name": "Full Virus Scan",
       "short_name": "Scan",
-      "url": "./?tab=Security",
+      "description": "Immediately start a global security audit",
+      "url": "./?tab=Security&action=scan",
       "icons": [{ "src": "https://cdn-icons-png.flaticon.com/96/3067/3067451.png", "sizes": "96x96" }]
     },
     {
-      "name": "Status Saver",
-      "short_name": "Status",
-      "url": "./?tab=Media",
+      "name": "CPU Performance Tuner",
+      "short_name": "Tune",
+      "description": "Optimize and cool your device processor",
+      "url": "./?tab=Security&action=tune",
+      "icons": [{ "src": "https://cdn-icons-png.flaticon.com/96/3067/3067451.png", "sizes": "96x96" }]
+    },
+    {
+      "name": "Hidden Codes",
+      "short_name": "Codes",
+      "description": "Access secret Android USSD codes",
+      "url": "./?tab=Codes",
       "icons": [{ "src": "https://cdn-icons-png.flaticon.com/96/3067/3067451.png", "sizes": "96x96" }]
     }
-  ],
-  "prefer_related_applications": false,
-  "related_applications": []
+  ]
 }
